[project]
name = "proxyswarm"
version = "0.1.0"
description = "Free-proxy-pool bulk fetcher with a self-tuning proxy scheduler and a pluggable use-case API."
readme = "README.md"
authors = [
    { name = "metalcorpe", email = "20791966+metalcorpe@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "pyzipper>=0.4.0",
    "requests>=2.34.2",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.3.0",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
